add appel offre list

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.0",
         "awurth/slim-helpers": "^1.0",
         "awurth/slim-validation": "^3.0",
-        "cartalyst/sentinel": "^2.0",
+        "cartalyst/sentinel": "2.0.*",
         "illuminate/database": "^5.4",
         "illuminate/events": "^5.4",
         "monolog/monolog": "^1.23",
